--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1,21 +1,4 @@
-/*!
- * Theme Name:       Minimize
- * Theme URI:        http://www.seothemes.com/themes/minimize/
- * Description:      Starter theme for the Genesis Framework.
- * Author:           SEO Themes
- * Author URI:       http://www.seothemes.com/
- * Version:          0.1.0
- * Text Domain:      minimize
- * Tags: one-column, accessibility-ready, custom-logo, custom-background, custom-colors, custom-header, custom-menu, featured-images, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready.
- * Template:         genesis
- * Template Version: 2.5.2
- * License:          GPL-2.0+
- * License URI:      http://www.gnu.org/licenses/gpl-2.0.html
- * GitHub Theme URI: https://github.com/seothemes/minimize
- */
-
 /* # Table of Contents
-
 - Utilities
 	- Variables
 	- Mixins
@@ -73,17 +56,16 @@
 - Print
 	- Print Styles
 */
-
-@import 'utilities';
-@import 'reset';
-@import 'defaults';
-@import 'layout';
-@import 'common';
-@import 'header';
-@import 'menus';
-@import 'content';
-@import 'sidebars';
-@import 'footer';
-@import 'plugins';
-@import 'home';
-@import 'print';
+@import "utilities";
+@import "reset";
+@import "defaults";
+@import "layout";
+@import "common";
+@import "header";
+@import "menus";
+@import "content";
+@import "sidebars";
+@import "footer";
+@import "plugins";
+@import "home";
+@import "print";
