--- a/assets/styles/_defaults.scss
+++ b/assets/styles/_defaults.scss
@@ -2,95 +2,98 @@
 --------------------------------------------- */
 
 * {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 ::selection {
-    background-color: $dark;
-    color: $white;
+	color: $white;
+	background-color: $dark;
 }
 
 html {
-    font-size: 62.5%; // 10px browser default.
-    max-width: 100vw;
-    overflow-x: hidden;
+	overflow-x: hidden;
+	max-width: 100vw;
+	font-size: 62.5%; // 10px browser default.
 }
 
 body {
-    background-color: $white;
-    color: $dark;
-    font-family: $font-body;
-    font-size: 1.5rem;
-    font-weight: $normal;
-    line-height: 1.82; // Golden ratio.
-    letter-spacing: 0.01em;
-    -webkit-font-smoothing: subpixel-antialiased;
-    -moz-font-smoothing: grayscale;
-    margin: 0;
-    max-width: 100vw;
-    overflow-x: hidden;
-    @include breakpoint(sm) {
-        font-size: 1.6rem;
-    }
+	overflow-x: hidden;
+	max-width: 100vw;
+	margin: 0;
+	color: $dark;
+	background-color: $white;
+	font-family: $font-body;
+	font-size: 1.5rem;
+	font-weight: $normal;
+	line-height: 1.82; // Golden ratio.
+	letter-spacing: 0.01em;
+	-webkit-font-smoothing: subpixel-antialiased;
+	-moz-font-smoothing: grayscale;
+
+	@include breakpoint(sm) {
+		font-size: 1.6rem;
+	}
 }
 
-body>div {
-    font-size: 1.5rem;
-    @include breakpoint(sm) {
-        font-size: 1.6rem;
-    }
+body > div {
+	font-size: 1.5rem;
+
+	@include breakpoint(sm) {
+		font-size: 1.6rem;
+	}
 }
 
 p {
-    margin: 0 0 1.618em;
-    padding: 0;
+	margin: 0 0 1.618em;
+	padding: 0;
 }
 
 a {
-    color: $accent;
-    word-wrap: break-word;
-    @include transition;
-    &:hover {
-        color: $dark;
-    }
+	color: $accent;
+	word-wrap: break-word;
+
+	@include transition;
+
+	&:hover {
+		color: $dark;
+	}
 }
 
 ol,
 ul {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 li {
-    list-style-type: none;
+	list-style-type: none;
 }
 
 hr {
-    border: 0;
-    border-collapse: collapse;
-    border-bottom: $site-border;
-    clear: both;
-    padding: 1em 0 0;
-    margin: 0 0 2em;
+	clear: both;
+	margin: 0 0 2em;
+	padding: 1em 0 0;
+	border: 0;
+	border-bottom: $site-border;
+	border-collapse: collapse;
 }
 
 b,
 strong {
-    font-weight: $bolder;
+	font-weight: $bolder;
 }
 
 blockquote,
 cite,
 em,
 i {
-    font-style: italic;
+	font-style: italic;
 }
 
 blockquote {
-    margin: 1em 0;
-    padding: 0 1em;
+	margin: 1em 0;
+	padding: 0 1em;
 }
-
 
 /* ## Headings
 --------------------------------------------- */
@@ -101,45 +104,46 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: $font-heading;
-    font-weight: $bolder;
-    line-height: 1.236; // Golden ratio.
-    letter-spacing: 0;
-    margin: 0 0 0.618em;
-    -webkit-font-smoothing: antialiased;
+	margin: 0 0 0.618em;
+	font-family: $font-heading;
+	font-weight: $bolder;
+	line-height: 1.236; // Golden ratio.
+	letter-spacing: 0;
+	-webkit-font-smoothing: antialiased;
 }
 
 h1 {
-    font-size: 2.6em;
-    margin: 0 0 0.382em; // Golden ratio.
-    @include breakpoint(sm) {
-        font-size: 3.6em;
-    }
+	margin: 0 0 0.382em; // Golden ratio.
+	font-size: 2.6em;
+
+	@include breakpoint(sm) {
+		font-size: 3.6em;
+	}
 }
 
 h2 {
-    font-size: 2em;
-    @include breakpoint(sm) {
-        font-size: 2.4em;
-    }
+	font-size: 2em;
+
+	@include breakpoint(sm) {
+		font-size: 2.4em;
+	}
 }
 
 h3 {
-    font-size: 1.8em;
+	font-size: 1.8em;
 }
 
 h4 {
-    font-size: 1.4em;
+	font-size: 1.4em;
 }
 
 h5 {
-    font-size: 1.2em;
+	font-size: 1.2em;
 }
 
 h6 {
-    font-size: 1.1em;
+	font-size: 1.1em;
 }
-
 
 /* ## Forms
 --------------------------------------------- */
@@ -147,40 +151,42 @@ h6 {
 input,
 select,
 textarea {
-    background-color: transparent;
-    border: $site-border;
-    border-radius: $site-radius;
-    padding: 0.5em 1em;
-    width: 100%;
-    line-height: 2;
-    @include transition;
-    &:focus {
-        outline: none;
-        border-color: $dark;
-    }
+	width: 100%;
+	padding: 0.5em 1em;
+	border: $site-border;
+	border-radius: $site-radius;
+	background-color: transparent;
+	line-height: 2;
+
+	@include transition;
+
+	&:focus {
+		border-color: $dark;
+		outline: none;
+	}
 }
 
 :focus {
-    outline: $site-border;
+	outline: $site-border;
 }
 
 input[type="checkbox"],
 input[type="image"],
 input[type="radio"] {
-    width: auto;
+	width: auto;
 }
 
 input[type="search"] {
-    -webkit-appearance: none;
+	-webkit-appearance: none;
 }
 
 ::-moz-placeholder {
-    color: $dark;
-    opacity: 1;
+	opacity: 1;
+	color: $dark;
 }
 
 ::-webkit-input-placeholder {
-    color: $dark;
+	color: $dark;
 }
 
 .button,
@@ -188,83 +194,93 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-    background-color: $dark;
-    border: 0;
-    border-radius: 9rem;
-    color: $white;
-    cursor: pointer;
-    font-size: 1.6rem;
-    font-weight: $bolder;
-    padding: 1.2em 2.4em;
-    text-decoration: none;
-    $white-space: nowrap;
-    display: inline-block;
-    width: auto;
-    height: auto;
-    line-height: 1;
-    box-shadow: inset 0 0 20rem rgba($white,0), 0 0 0 rgba($dark, 0);
-    @include transition;
-    &:after {
-        content: "\f3d6";
-        display: inline-block;
-        font-family: "Ionicons";
-        speak: none;
-        font-style: normal;
-        font-weight: normal;
-        font-variant: normal;
-        text-transform: none;
-        text-rendering: auto;
-        line-height: 0;
-        margin-top: 0.1em;
-        margin-left: 0.618em;
-        @include transition;
-    }
-    &:hover,
-    &:focus {
-        color: $white;
-        box-shadow: inset 0 0 20rem rgba($white,0.2), 0 2rem 1rem -1rem rgba($dark, 0.1);
-        &:after {
-            transform: translateX(5px);
-        }
-    }
-    &.secondary {
-        background-color: $accent;
-        &:hover {
-            background-color: $dark;
-        }
-    }
-    &.small {
-        font-size: 1.2rem;
-        padding: 1em 2em;
-        white-space: nowrap;
-    }
-    &:disabled,
-    &:disabled:hover {
-        background-color: $light;
-        border-width: 0;
-        color: darken($light, 50%);
-        cursor: not-allowed;
-    }
-    +button,
-    +.button {
-        margin-top: 1em;
-        clear: both;
-        @include breakpoint(xs) {
-            margin-top: 0;
-            clear: none;
-        }
-    }
+	display: inline-block;
+	width: auto;
+	height: auto;
+	padding: 1.2em 2.4em;
+	border: 0;
+	border-radius: 9rem;
+	color: $white;
+	background-color: $dark;
+	box-shadow: inset 0 0 20rem rgba($white, 0), 0 0 0 rgba($dark, 0);
+	font-size: 1.6rem;
+	font-weight: $bolder;
+	line-height: 1;
+	white-space: nowrap;
+	text-decoration: none;
+	cursor: pointer;
+
+	@include transition;
+
+	&:after {
+		display: inline-block;
+		margin-top: 0.1em;
+		margin-left: 0.618em;
+		font-family: ionicons, sans-serif;
+		font-weight: 400;
+		font-style: normal;
+		font-variant: normal;
+		line-height: 0;
+		text-transform: none;
+		content: "\f3d6";
+		text-rendering: auto;
+		speak: none;
+
+		@include transition;
+	}
+
+	&:hover,
+	&:focus {
+		color: $white;
+		box-shadow: inset 0 0 20rem rgba($white, 0.2), 0 2rem 1rem -1rem rgba($dark, 0.1);
+
+		&:after {
+			transform: translateX(5px);
+		}
+	}
+
+	&.secondary {
+		background-color: $accent;
+
+		&:hover {
+			background-color: $dark;
+		}
+	}
+
+	&.small {
+		padding: 1em 2em;
+		font-size: 1.2rem;
+		white-space: nowrap;
+	}
+
+	&:disabled,
+	&:disabled:hover {
+		border-width: 0;
+		color: darken($light, 50%);
+		background-color: $light;
+		cursor: not-allowed;
+	}
+
+	+ button,
+	+ .button {
+		clear: both;
+		margin-top: 1em;
+
+		@include breakpoint(xs) {
+			clear: none;
+			margin-top: 0;
+		}
+	}
 }
 
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button {
-    display: none;
+	display: none;
 }
 
 fieldset {
-    margin-bottom: 1em;
+	margin-bottom: 1em;
 }
-
 
 /* ## Objects
 --------------------------------------------- */
@@ -276,52 +292,50 @@ object,
 video,
 .wp-caption,
 .wp-video-shortcode {
-    max-width: 100%;
-    display: block;
+	display: block;
+	max-width: 100%;
 }
 
 img {
-    height: auto;
+	height: auto;
 }
 
 figure {
-    margin: 0;
+	margin: 0;
 }
 
 video {
-    object-fit: cover;
+	object-fit: cover;
 }
 
 .wp-video-shortcode {
-    width: auto !important;
+	width: auto !important;
 }
-
 
 /* ## Tables
 --------------------------------------------- */
 
 table {
-    background-color: $white;
-    border: $site-border;
-    border-collapse: collapse;
-    border-spacing: 0;
-    line-height: 1;
-    margin-bottom: 4rem;
-    width: 100%;
+	width: 100%;
+	margin-bottom: 4rem;
+	border: $site-border;
+	border-spacing: 0;
+	border-collapse: collapse;
+	background-color: $white;
+	line-height: 1;
 }
 
 tbody {
-    border-bottom: $site-border;
+	border-bottom: $site-border;
 }
 
 td,
 th {
-    text-align: left;
-    padding: 0.618em;
-    border-top: $site-border;
-    border-right: $site-border;
+	padding: 0.618em;
+	border-top: $site-border;
+	border-right: $site-border;
+	text-align: left;
 }
-
 
 /* ## Accessibility
 --------------------------------------------- */
@@ -331,31 +345,33 @@ th {
 .screen-reader-shortcut,
 .wp-custom-logo .site-title,
 .wp-custom-logo .site-description {
-    @include screen-reader-text;
+
+	@include screen-reader-text;
 }
 
 .screen-reader-text:focus,
 .screen-reader-shortcut:focus {
-    clip: auto !important;
-    height: auto;
-    width: auto;
-    display: block;
-    padding: 1rem 2rem;
-    z-index: 100000;
-    text-decoration: none;
-    box-shadow: 0 0 0.2rem 0.2rem rgba($dark, 0.1);
+	display: block;
+	clip: auto !important;
+	z-index: 100000;
+	width: auto;
+	height: auto;
+	padding: 1rem 2rem;
+	box-shadow: 0 0 0.2rem 0.2rem rgba($dark, 0.1);
+	text-decoration: none;
 }
 
 .more-link {
-    position: relative;
-    font-style: normal;
+	position: relative;
+	font-style: normal;
 }
 
 .genesis-skip-link {
-    margin: 0;
-    li {
-        height: 0;
-        width: 0;
-        list-style: none;
-    }
+	margin: 0;
+
+	li {
+		width: 0;
+		height: 0;
+		list-style: none;
+	}
 }
