--- a/assets/styles/_reset.scss
+++ b/assets/styles/_reset.scss
@@ -1,9 +1,7 @@
 /* normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 
-
 /* Document
    ========================================================================== */
-
 
 /**
  * 1. Correct the line height in all browsers.
@@ -12,27 +10,27 @@
  */
 
 html {
-    line-height: 1.15;
-    /* 1 */
-    -ms-text-size-adjust: 100%;
-    /* 2 */
-    -webkit-text-size-adjust: 100%;
-    /* 2 */
-}
+	line-height: 1.15;
 
+	/* 1 */
+	-ms-text-size-adjust: 100%;
+
+	/* 2 */
+	-webkit-text-size-adjust: 100%;
+
+	/* 2 */
+}
 
 /* Sections
    ========================================================================== */
-
 
 /**
  * Remove the margin in all browsers (opinionated).
  */
 
 body {
-    margin: 0;
+	margin: 0;
 }
-
 
 /**
  * Add the correct display in IE 9-.
@@ -44,9 +42,8 @@ footer,
 header,
 nav,
 section {
-    display: block;
+	display: block;
 }
-
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -54,14 +51,12 @@ section {
  */
 
 h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
+	margin: 0.67em 0;
+	font-size: 2em;
 }
-
 
 /* Grouping content
    ========================================================================== */
-
 
 /**
  * Add the correct display in IE 9-.
@@ -71,19 +66,18 @@ h1 {
 figcaption,
 figure,
 main {
-    /* 1 */
-    display: block;
-}
 
+	/* 1 */
+	display: block;
+}
 
 /**
  * Add the correct margin in IE 8.
  */
 
 figure {
-    margin: 1em 4rem;
+	margin: 1em 4rem;
 }
-
 
 /**
  * 1. Add the correct box sizing in Firefox.
@@ -91,14 +85,16 @@ figure {
  */
 
 hr {
-    box-sizing: content-box;
-    /* 1 */
-    height: 0;
-    /* 1 */
-    overflow: visible;
-    /* 2 */
-}
 
+	/* 1 */
+	overflow: visible;
+	box-sizing: content-box;
+
+	/* 1 */
+	height: 0;
+
+	/* 2 */
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -106,16 +102,16 @@ hr {
  */
 
 pre {
-    font-family: monospace, monospace;
-    /* 1 */
-    font-size: 1em;
-    /* 2 */
-}
+	font-family: monospace;
 
+	/* 1 */
+	font-size: 1em;
+
+	/* 2 */
+}
 
 /* Text-level semantics
    ========================================================================== */
-
 
 /**
  * 1. Remove the gray background on active links in IE 10.
@@ -123,12 +119,13 @@ pre {
  */
 
 a {
-    background-color: transparent;
-    /* 1 */
-    -webkit-text-decoration-skip: objects;
-    /* 2 */
-}
+	background-color: transparent;
 
+	/* 1 */
+	-webkit-text-decoration-skip: objects;
+
+	/* 2 */
+}
 
 /**
  * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
@@ -136,14 +133,16 @@ a {
  */
 
 abbr[title] {
-    border-bottom: none;
-    /* 1 */
-    text-decoration: underline;
-    /* 2 */
-    text-decoration: underline dotted;
-    /* 2 */
-}
+	border-bottom: none;
 
+	/* 1 */
+	text-decoration: underline;
+
+	/* 2 */
+	text-decoration: underline dotted;
+
+	/* 2 */
+}
 
 /**
  * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
@@ -151,9 +150,8 @@ abbr[title] {
 
 b,
 strong {
-    font-weight: inherit;
+	font-weight: inherit;
 }
-
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
@@ -161,9 +159,8 @@ strong {
 
 b,
 strong {
-    font-weight: bolder;
+	font-weight: bolder;
 }
-
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -173,40 +170,38 @@ strong {
 code,
 kbd,
 samp {
-    font-family: monospace, monospace;
-    /* 1 */
-    font-size: 1em;
-    /* 2 */
-}
+	font-family: monospace;
 
+	/* 1 */
+	font-size: 1em;
+
+	/* 2 */
+}
 
 /**
  * Add the correct font style in Android 4.3-.
  */
 
 dfn {
-    font-style: italic;
+	font-style: italic;
 }
-
 
 /**
  * Add the correct background and color in IE 9-.
  */
 
 mark {
-    background-color: #ff0;
-    color: #000;
+	color: #000;
+	background-color: #ff0;
 }
-
 
 /**
  * Add the correct font size in all browsers.
  */
 
 small {
-    font-size: 80%;
+	font-size: 80%;
 }
-
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -215,24 +210,22 @@ small {
 
 sub,
 sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
+	position: relative;
+	font-size: 75%;
+	line-height: 0;
+	vertical-align: baseline;
 }
 
 sub {
-    bottom: -0.25em;
+	bottom: -0.25em;
 }
 
 sup {
-    top: -0.5em;
+	top: -0.5em;
 }
-
 
 /* Embedded content
    ========================================================================== */
-
 
 /**
  * Add the correct display in IE 9-.
@@ -240,41 +233,36 @@ sup {
 
 audio,
 video {
-    display: inline-block;
+	display: inline-block;
 }
-
 
 /**
  * Add the correct display in iOS 4-7.
  */
 
 audio:not([controls]) {
-    display: none;
-    height: 0;
+	display: none;
+	height: 0;
 }
-
 
 /**
  * Remove the border on images inside links in IE 10-.
  */
 
 img {
-    border-style: none;
+	border-style: none;
 }
-
 
 /**
  * Hide the overflow in IE.
  */
 
 svg:not(:root) {
-    overflow: hidden;
+	overflow: hidden;
 }
-
 
 /* Forms
    ========================================================================== */
-
 
 /**
  * 1. Change the font styles in all browsers (opinionated).
@@ -286,16 +274,19 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: $font-body;
-    /* 1 */
-    font-size: 100%;
-    /* 1 */
-    line-height: 1.15;
-    /* 1 */
-    margin: 0;
-    /* 2 */
-}
 
+	/* 1 */
+	margin: 0;
+	font-family: $font-body;
+
+	/* 1 */
+	font-size: 100%;
+
+	/* 1 */
+	line-height: 1.15;
+
+	/* 2 */
+}
 
 /**
  * Show the overflow in IE.
@@ -304,10 +295,10 @@ textarea {
 
 button,
 input {
-    /* 1 */
-    overflow: visible;
-}
 
+	/* 1 */
+	overflow: visible;
+}
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
@@ -316,10 +307,10 @@ input {
 
 button,
 select {
-    /* 1 */
-    text-transform: none;
-}
 
+	/* 1 */
+	text-transform: none;
+}
 
 /**
  * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
@@ -329,15 +320,10 @@ select {
 
 button,
 html [type="button"],
-
-/* 1 */
-
 [type="reset"],
 [type="submit"] {
-    -webkit-appearance: button;
-    /* 2 */
+	-webkit-appearance: button;
 }
-
 
 /**
  * Remove the inner border and padding in Firefox.
@@ -347,10 +333,9 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
+	padding: 0;
+	border-style: none;
 }
-
 
 /**
  * Restore the focus styles unset by the previous rule.
@@ -360,18 +345,16 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-    outline: 0.1rem dotted ButtonText;
+	outline: 0.1rem dotted ButtonText;
 }
-
 
 /**
  * Correct the padding in Firefox.
  */
 
 fieldset {
-    padding: 0.35em 0.75em 0.625em;
+	padding: 0.35em 0.75em 0.625em;
 }
-
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -381,20 +364,25 @@ fieldset {
  */
 
 legend {
-    box-sizing: border-box;
-    /* 1 */
-    color: inherit;
-    /* 2 */
-    display: table;
-    /* 1 */
-    max-width: 100%;
-    /* 1 */
-    padding: 0;
-    /* 3 */
-    white-space: normal;
-    /* 1 */
-}
 
+	/* 2 */
+	display: table;
+	box-sizing: border-box;
+
+	/* 1 */
+	max-width: 100%;
+
+	/* 1 */
+	padding: 0;
+
+	/* 1 */
+	color: inherit;
+
+	/* 3 */
+	white-space: normal;
+
+	/* 1 */
+}
 
 /**
  * 1. Add the correct display in IE 9-.
@@ -402,21 +390,21 @@ legend {
  */
 
 progress {
-    display: inline-block;
-    /* 1 */
-    vertical-align: baseline;
-    /* 2 */
-}
+	display: inline-block;
 
+	/* 1 */
+	vertical-align: baseline;
+
+	/* 2 */
+}
 
 /**
  * Remove the default vertical scrollbar in IE.
  */
 
 textarea {
-    overflow: auto;
+	overflow: auto;
 }
-
 
 /**
  * 1. Add the correct box sizing in IE 10-.
@@ -425,12 +413,13 @@ textarea {
 
 [type="checkbox"],
 [type="radio"] {
-    box-sizing: border-box;
-    /* 1 */
-    padding: 0;
-    /* 2 */
-}
+	box-sizing: border-box;
 
+	/* 1 */
+	padding: 0;
+
+	/* 2 */
+}
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
@@ -438,9 +427,8 @@ textarea {
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-    height: auto;
+	height: auto;
 }
-
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
@@ -448,12 +436,13 @@ textarea {
  */
 
 [type="search"] {
-    -webkit-appearance: textfield;
-    /* 1 */
-    outline-offset: -0.2rem;
-    /* 2 */
-}
+	-webkit-appearance: textfield;
 
+	/* 1 */
+	outline-offset: -0.2rem;
+
+	/* 2 */
+}
 
 /**
  * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
@@ -461,9 +450,8 @@ textarea {
 
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
+	-webkit-appearance: none;
 }
-
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -471,16 +459,16 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    /* 1 */
-    font: inherit;
-    /* 2 */
-}
+	-webkit-appearance: button;
 
+	/* 1 */
+	font: inherit;
+
+	/* 2 */
+}
 
 /* Interactive
    ========================================================================== */
-
 
 /*
  * Add the correct display in IE 9-.
@@ -488,74 +476,63 @@ textarea {
  */
 
 details,
-
-/* 1 */
-
 menu {
-    display: block;
+	display: block;
 }
-
 
 /*
  * Add the correct display in all browsers.
  */
 
 summary {
-    display: list-item;
+	display: list-item;
 }
-
 
 /* Scripting
    ========================================================================== */
-
 
 /**
  * Add the correct display in IE 9-.
  */
 
 canvas {
-    display: inline-block;
+	display: inline-block;
 }
-
 
 /**
  * Add the correct display in IE.
  */
 
 template {
-    display: none;
+	display: none;
 }
-
 
 /* Hidden
    ========================================================================== */
-
 
 /**
  * Add the correct display in IE 10-.
  */
 
 [hidden] {
-    display: none;
+	display: none;
 }
-
 
 /* ## Box Sizing
 --------------------------------------------- */
 
 html,
 input[type="search"] {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
+	box-sizing: inherit;
 }
-
 
 /* ## Float Clearing
 --------------------------------------------- */
@@ -574,5 +551,6 @@ input[type="search"] {
 .site-inner,
 .widget,
 .wrap {
-    @include clearfix;
+
+	@include clearfix;
 }
